<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">D PLAY Controller</string>

    <string name="btnLED_name">LED</string>
    <string name="btnButton_name">버튼, 기울기</string>
    <string name="btnSensor_name">각종 센서</string>
    <string name="btnBuzzer_name">멜로디</string>
    <string name="btnMotor_name">모터</string>
    <string name="btnSettings_name">설정</string>

    <string name="led02_name">2번</string>
    <string name="led03_name">3번</string>
    <string name="led04_name">4번</string>
    <string name="led05_name">5번</string>
    <string name="led06_name">6번</string>
    <string name="led07_name">7번</string>
    <string name="led08_name">8번</string>
    <string name="led09_name">9번</string>
    <string name="led10_name">10번</string>
    <string name="led11_name">11번</string>
    <string name="led12_name">12번</string>
    <string name="led13_name">13번</string>

    <string name="label_LED">LED</string>
    <string name="label_temperature">온도 센서</string>
    <string name="label_IR">적외선 센서</string>
    <string name="label_button">버튼</string>
    <string name="label_buzzer">버저</string>
    <string name="label_cds">조도 센서</string>
    <string name="label_rotation">가변저항</string>
    <string name="label_tilt">기울기 센서</string>
    <string name="label_humidity">온습도 센서</string>
    <string name="label_DCmotor">DC 모터</string>
    <string name="label_servo">서보 모터</string>
    
    <string name="buzzer_syllable_names">계이름</string>
    <string name="buzzer_C">도</string>
    <string name="buzzer_D">레</string>
    <string name="buzzer_E">미</string>
    <string name="buzzer_F">파</string>
    <string name="buzzer_G">솔</string>
    <string name="buzzer_A">라</string>
    <string name="buzzer_B">시</string>
    
    <string name="motor_type">모터 종류</string>
    <string name="motor_DC">DC 모터</string>
    <string name="motor_servo">서보 모터</string>
    <string name="motor_direction_set">회전 방향 설정</string>
    <string name="motor_angle_set">각도 설정</string>
    <string name="motor_DC_speed">DC 모터 속도</string>
    <string name="motor_angle">서보 모터 각도</string>

    <string name="left">왼쪽</string>
    <string name="right">오른쪽</string>

    <string name="analog_pin">핀 번호</string>
    <string name="analog_pin00">A00</string>
    <string name="analog_pin01">A01</string>
    <string name="analog_pin02">A02</string>
    <string name="analog_pin03">A03</string>
    <string name="analog_pin04">A04</string>
    <string name="analog_pin05">A05</string>
    
    <string name="digital_pin">핀 번호</string>
    <string name="digital_pin02">02</string>
    <string name="digital_pin03">03</string>
    <string name="digital_pin04">04</string>
    <string name="digital_pin05">05</string>
    <string name="digital_pin06">06</string>
    <string name="digital_pin07">07</string>
    <string name="digital_pin08">08</string>
    <string name="digital_pin09">09</string>
    <string name="digital_pin10">10</string>
    <string name="digital_pin11">11</string>
    <string name="digital_pin12">12</string>
    <string name="digital_pin13">13</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
</resources>
