<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#000000"
    android:padding="6dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/analog_pin"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textOn="@string/digital_pin02"
                    android:textOff="@string/digital_pin02"
                    android:textColor="@drawable/pin_number_toggle_text"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:background="@drawable/pin_number_toggle"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin03"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin04"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin05"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin06"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin07"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin08"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin09"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin10"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin11"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin12"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/digital_pin13"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/buzzer_syllable_names"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_C"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_D"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_E"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_F"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_G"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_A"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#0000"
                    android:gravity="center"
                    android:text="@string/buzzer_B"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>