<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">
        <Button
            android:id="@+id/btnLED"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnLED_name"
            android:background="#d78a8a"
            android:layout_weight="1"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnButton_name"
            android:background="#a8a8bf"
            android:layout_weight="1"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">
        <Button
            android:id="@+id/btnSensor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSensor_name"
            android:layout_weight="1"
            android:background="#d8de75"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnBuzzer_name"
                android:layout_weight="1"
                android:background="#819ee1"
                android:layout_margin="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnMotor_name"
                android:layout_weight="1"
                android:background="#dea175"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="3">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnSettings_name"
            android:background="#797979"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>