<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#000000"
    android:padding="6dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_temperature"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/temperature"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_humidity"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/humidity"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_IR"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/ir"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_cds"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/cds"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_rotation"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"/>
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/rotation"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/analog_pin"
                android:textColor="#ffff"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="10dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnA00"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/analog_pin00"
                        android:textColor="#ffff"
                        android:gravity="center"
                        android:background="#0000"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/analog_pin01"
                        android:textColor="#ffff"
                        android:gravity="center"
                        android:background="#0000"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/analog_pin02"
                        android:textColor="#ffff"
                        android:gravity="center"
                        android:background="#0000"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/analog_pin03"
                        android:textColor="#ffff"
                        android:gravity="center"
                        android:background="#0000"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/analog_pin04"
                        android:textColor="#ffff"
                        android:gravity="center"
                        android:background="#0000"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/analog_pin05"
                        android:textColor="#ffff"
                        android:gravity="center"
                        android:background="#0000"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Sensor value"
            android:textColor="#ffff"/>

    </LinearLayout>
</LinearLayout>