<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#000000"
    android:padding="6dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/motor_type"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/dc_motor"
                android:layout_marginBottom="30dp"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/servo"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/motor_direction_set"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="13sp"/>
            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pin_number_toggle"
                android:gravity="center"
                android:textOff="@string/left"
                android:textOn="@string/right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@drawable/pin_number_toggle_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/motor_angle_set"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="13sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text=""/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/motor_DC_speed"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="0"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/motor_angle"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="0"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>